--- a/app/src/main/res/drawable-v24/btn_mov_focused1.xml
+++ b/app/src/main/res/drawable-v24/btn_mov_focused1.xml
@@ -4,7 +4,7 @@
 
     <!--<solid android:color="#03A9F4"/>-->
 
-    <stroke android:width="1dp" android:color="#7e0202"/>
+    <stroke android:width="1dp" android:color="#0E0D0D"/>
     <corners android:radius="20dp"/>
     <padding android:top="0dp" android:bottom="0dp" android:left="15dp" android:right="15dp"/>
 
