--- a/app/src/main/res/drawable-v24/btn_mov_pressed1.xml
+++ b/app/src/main/res/drawable-v24/btn_mov_pressed1.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#B1B18C"/>
+    <solid android:color="#5A1628"/>
 
-    <stroke android:width="1dp" android:color="#7e0202"/>
+    <stroke android:width="1dp" android:color="#D5CBCB"/>
     <corners android:radius="20dp"/>
     <padding android:top="0dp" android:bottom="0dp" android:left="15dp" android:right="15dp"/>
 
