--- a/app/src/main/res/drawable/btn_estilo.xml
+++ b/app/src/main/res/drawable/btn_estilo.xml
@@ -6,9 +6,9 @@
     <gradient
         android:angle="45"
         android:centerX="35%"
-        android:centerColor="#7582A8"
+        android:centerColor="#325FDF"
         android:startColor="#1976D2"
-        android:endColor="#8D9DB4"
+        android:endColor="#D2DBEB"
         android:type="linear"
         />
     <padding
@@ -23,6 +23,6 @@
         />
     <stroke
         android:width="3dp"
-        android:color="#0024FD"
+        android:color="#E91E63"
         />
 </shape>
