--- a/app/src/main/res/layout/list_layout.xml
+++ b/app/src/main/res/layout/list_layout.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EBEBE9"
+    android:background="#4CAF50"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
@@ -13,7 +13,7 @@
         card_view:cardElevation="6dp"
         card_view:cardCornerRadius="5dp"
         android:layout_margin="0dp"
-        card_view:cardBackgroundColor="#E4E9EC"
+        card_view:cardBackgroundColor="#E91E63"
         android:foreground="?android:attr/selectableItemBackground"
         android:clickable="true"
         >
@@ -87,7 +87,7 @@
             android:layout_toRightOf="@id/imageView"
             android:text="Precio: "
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-            android:textColor="#000000" />
+            android:textColor="#0A0909" />
 
         <TextView
             android:id="@+id/textViewPrecio1"
